[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
lazy_static = "1.4.0"
once_cell = "1.8.0"
regex = "1.5.4"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket_auth = { version = "0.3.0", features = ["postgres-db"]}
serde = "1.0.129"
serde_json = "1.0"
tokio = { version = "1.10.0", features = ["full"]}

[dev-dependencies]
cucumber_rust = "0.9.0"
proptest = "1.0.0"
speculate = "0.1"

[[test]]
name = "cucumber"
harness = false # Allows Cucumber to print output instead of libtest